@@ -1,6 +1,14 @@
 2008-10-27  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/nm-connection-editor.c
+		- Don't allow editing of read-only connections
+
+	* src/gconf-helpers/gconf-helpers.c
+		- Don't read or save the connection setting's 'read-only' value to GConf
+
+2008-10-27  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-editor.c
 		- Revert unintended checkin for read-only connections that snuck into
 			the previous commit
 
